--- a/src/app/all-smiles/all-smiles.component.html
+++ b/src/app/all-smiles/all-smiles.component.html
@@ -8,15 +8,15 @@
         </div>
         <div class="row d-flex justify-content-center px-1">
             <div class="col-11">
-                <div class="row d-flex justify-content-center">
+                <div class="row d-flex justify-content-center mt-3">
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before2.png">
+                                <img width="100%" src="../../assets/images/before01.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after2.png">
+                                <img width="100%" src="../../assets/images/after01.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                         </img-comparison-slider>
@@ -24,24 +24,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before02.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
-                                <figcaption>After</figcaption>
-                            </figure>                
-                            
-                        </img-comparison-slider>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img-comparison-slider>
-                            <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
-                                <figcaption>Before</figcaption>
-                            </figure>
-                            <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after02.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -50,11 +37,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before03.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after03.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -63,11 +50,25 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before12.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after12.jpg">
+                                <figcaption>After</figcaption>
+                            </figure>                
+                            
+                        </img-comparison-slider>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <img-comparison-slider>
+                            <figure slot="first" class="before">
+                                <img width="100%" src="../../assets/images/before11.jpg">
+                                <figcaption>Before</figcaption>
+                            </figure>
+                            <figure slot="second" class="after">
+                                <img width="100%" src="../../assets/images/after11.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -76,11 +77,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before10.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after10.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -89,11 +90,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before05.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after05.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -102,11 +103,25 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before04.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after04.jpg">
+                                <figcaption>After</figcaption>
+                            </figure>                
+                            
+                        </img-comparison-slider>
+                    </div>
+
+                    <div class="col-12 col-md-6 col-lg-3">
+                        <img-comparison-slider>
+                            <figure slot="first" class="before">
+                                <img width="100%" src="../../assets/images/before08.jpg">
+                                <figcaption>Before</figcaption>
+                            </figure>
+                            <figure slot="second" class="after">
+                                <img width="100%" src="../../assets/images/after08.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -115,11 +130,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before09.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after09.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -128,11 +143,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before07.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after07.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
@@ -141,37 +156,11 @@
                     <div class="col-12 col-md-6 col-lg-3">
                         <img-comparison-slider>
                             <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
+                                <img width="100%" src="../../assets/images/before06.jpg">
                                 <figcaption>Before</figcaption>
                             </figure>
                             <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
-                                <figcaption>After</figcaption>
-                            </figure>                
-                            
-                        </img-comparison-slider>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img-comparison-slider>
-                            <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
-                                <figcaption>Before</figcaption>
-                            </figure>
-                            <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
-                                <figcaption>After</figcaption>
-                            </figure>                
-                            
-                        </img-comparison-slider>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-3">
-                        <img-comparison-slider>
-                            <figure slot="first" class="before">
-                                <img width="100%" src="assets/images/before1.png">
-                                <figcaption>Before</figcaption>
-                            </figure>
-                            <figure slot="second" class="after">
-                                <img width="100%" src="assets/images/after1.png">
+                                <img width="100%" src="../../assets/images/after06.jpg">
                                 <figcaption>After</figcaption>
                             </figure>                
                             
