--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="mbr-overlay" style="opacity: 0.4;background-color: #f76840"></div>
     <div class="container-fluid">
         <div class="row ml-3">
-            <div class="col-12 col-lg-9">
+            <div class="col-12 col-lg-12">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 main-heading row"><div class="col-12 col-md-6 col-lg-auto p-0"> Dr. Smile</div><div class="col-12 col-md-6 col-lg-7 p-0"><span class="mbr-fonts-style mb-3 display-5 text-sub-heading-main"><span class="hyphen">&nbsp;-&nbsp;</span>Your Smile Designer</span></div></h1>
                 <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5 text-sub-heading-des row">
                     <div class="col-12 col-md-12 col-lg-12 p-0">
@@ -152,11 +152,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider>
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before1.png">
+                        <img width="100%" src="assets/images/before1.png" loading="lazy">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after1.png">
+                        <img width="100%" src="assets/images/after1.png" loading="lazy">
                         <figcaption>After</figcaption>
                     </figure>                
                     
@@ -165,11 +165,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider>
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before2.png">
+                        <img width="100%" src="assets/images/before2.png" loading="lazy">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after2.png">
+                        <img width="100%" src="assets/images/after2.png" loading="lazy">
                     <figcaption>After</figcaption>
                     </figure>                
                     
@@ -178,11 +178,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider>
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before3.png">
+                        <img width="100%" src="assets/images/before3.png" loading="lazy">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after3.png">
+                        <img width="100%" src="assets/images/after3.png" loading="lazy">
                     <figcaption>After</figcaption>
                     </figure>                
                     
@@ -191,11 +191,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider style="width: 100% !important;">
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before4.png">
+                        <img width="100%" src="assets/images/before4.png" loading="lazy">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after4.png">
+                        <img width="100%" src="assets/images/after4.png" loading="lazy">
                     <figcaption>After</figcaption>
                     </figure>                
                     
@@ -224,7 +224,7 @@
         <div class="row justify-content-center text-white">
             <div class="col-11 col-lg-6 mt-3">
                 <div class="image-wrapper">
-                    <img src="assets/images/new-patient-v2.jpg" alt="Sr. Smile" class="image">
+                    <img src="assets/images/new-patient-v2.jpg" alt="Sr. Smile" class="image" loading="lazy">
                 </div>
             </div>
             <div class="col-11 col-lg-6 p-0">
@@ -274,7 +274,7 @@
                     <div class="container-fluid">
                         <div class="row d-flex justify-content-center">
                             <div class="col-auto">
-                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team1.jpg" alt="First slide">
+                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team1.jpg" alt="First slide" loading="lazy">
                             </div>
                         </div>
                         <div class="row d-flex justify-content-center mt-2">
@@ -293,7 +293,7 @@
                     <div class="container-fluid">
                         <div class="row d-flex justify-content-center">
                             <div class="col-auto">
-                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team2.jpg" alt="Second slide">
+                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team2.jpg" alt="Second slide" loading="lazy">
                             </div>
                         </div>
                         <div class="row d-flex justify-content-center mt-2">
@@ -312,7 +312,7 @@
                     <div class="container-fluid">
                         <div class="row d-flex justify-content-center">
                             <div class="col-auto">
-                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team3.jpg" alt="Third slide">
+                                <img class="img-thumbnail img-responsive small-image-test" src="../../assets/images/team3.jpg" alt="Third slide" loading="lazy">
                             </div>
                         </div>
                         <div class="row d-flex justify-content-center mt-2">
@@ -362,7 +362,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-10 col-6 col-lg-4 card shadow">
-                <img src="assets/images/bajaj-finserv-770x433.webp">
+                <img src="assets/images/bajaj-finserv-770x433.webp" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title">Features</h5>
                     <div class="card-text">
@@ -405,7 +405,7 @@
          </div>
          <div class="row d-flex justify-content-center mb-3">
              <div class="col-11 col-md-3 col-lg-4 my-1 p-0">
-                <img src="../../assets/images/Screenshot 2021-08-11 030133.png" alt="" srcset="" height="500px" width="500px">
+                <img src="../../assets/images/Screenshot 2021-08-11 030133.png" alt="" srcset="" height="500px" width="500px" loading="lazy">
              </div>
              <div class="col-12 col-md-6 col-lg-6 my-1">
                 <iframe width="600" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJd_juiRqe-DkRGbA3rRSsSn0&key=AIzaSyD79t-kfxeVlxdQde7oYSR7ue_rPNYkrr4"></iframe>
@@ -477,7 +477,7 @@
         </div>
         <div class="modal-body">
             <div class="row p-0">
-                <img src="../../assets/images/membership.JPG" alt="" class="image image-responsive" style="visibility: visible;">
+                <img src="../../assets/images/membership.JPG" alt="" class="image image-responsive" style="visibility: visible;" loading="lazy">
             </div>
             <div class="row d-flex justify-content-center">
                 <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216404476046">Register Now</a>
@@ -501,13 +501,13 @@
         <div class="modal-body">
             <div class="row p-0 d-flex justify-content-around">
                 <div class="col-12 col-md-3 col-lg-4 my-1 image-holder">
-                    <img src="../../assets/images/offer-1.JPG" alt="" class="image image-responsive" style="visibility: visible;">
+                    <img src="../../assets/images/offer-1.JPG" alt="" class="image image-responsive" style="visibility: visible;" loading="lazy">
                 </div>
                 <div class="col-12 col-md-3 col-lg-4 my-1 image-holder">
-                    <img src="../../assets/images/offer-2.JPG" alt="" class="image image-responsive" style="visibility: visible;">
+                    <img src="../../assets/images/offer-2.JPG" alt="" class="image image-responsive" style="visibility: visible;" loading="lazy">
                 </div>
                 <div class="col-12 col-md-3 col-lg-4 my-1 image-holder">
-                    <img src="../../assets/images/offer-3.JPG" alt="" class="image image-responsive" style="visibility: visible;">
+                    <img src="../../assets/images/offer-3.JPG" alt="" class="image image-responsive" style="visibility: visible;" loading="lazy">
                 </div>
             </div>
             <div class="row d-flex justify-content-center">
@@ -534,27 +534,27 @@
                     <div class="col-12 col-lg-4">
                         <div class="form-group">
                             <label for="rating">How was your experience ?</label>
-                            <ngb-rating [(rate)]="rating" class="form-control d-flex align-items-center" id="rating" style="font-size: 1.5rem;"></ngb-rating>
+                            <ngb-rating [(rate)]="rating" [max]="5" class="d-flex align-items-center" id="rating" style="font-size: 1.5rem;"></ngb-rating>
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="form-group">
                             <label for="name">Your Name</label>
-                            <input type="text" name="name" id="name" class="form-control form-control-text" placeholder="Enter your name">
+                            <input type="text" name="name" id="name" class="form-control form-control-text" placeholder="Enter your name" [(ngModel)]="name">
                         </div>
                     </div>
                     <div class="col-12 col-lg-4">
                         <div class="form-group">
                             <label for="date">Your Date Of Visit</label>
-                            <input type="date" name="date" id="date" class="form-control form-control-text">
+                            <input type="date" name="date" id="date" class="form-control form-control-text" [(ngModel)]="date">
                         </div>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-start">
                     <div class="col-auto" style="width: 100%;">
                         <div class="form-group" >
-                            <label for="feedback">{{ rating >= 8 && rating >= 0? "What did we do good ? " : rating >= 5  && rating >= 0 ? "What would you like us to change for better service ? " :  rating > 0 ? "Where did we disappoint you, please tell us " : "Please give your feedback"}}</label>
-                            <textarea name="feedback" id="feedback" rows="5" class="form-control form-control-text"></textarea>
+                            <label for="feedback">{{ rating >= 8 && rating >= 0? "What did we do good ? " : rating >= 2  && rating >= 0 ? "What would you like us to change for better service ? " :  rating > 0 ? "Where did we disappoint you, please tell us " : "Please give your feedback"}}</label>
+                            <textarea name="feedback" id="feedback" rows="5" class="form-control form-control-text" [(ngModel)]="feedback"></textarea>
                         </div>
                     </div>
                 </div>
