--- a/src/app/all-reviews/all-reviews.component.css
+++ b/src/app/all-reviews/all-reviews.component.css
@@ -1,70 +1,111 @@
 
 #content6-1{
-    margin-top:120px !important;
+  margin-top:80px !important;
 }
 .heading-main{
-    font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 39px;
-    color: rgba(0,0,0,0.82);
+  font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 39px;
+  color: rgba(0,0,0,0.82);
 }
 .heading-sub{
-    font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
-    font-weight: 400;
-    font-size: 26px;
-    line-height: 34px;
-    color: rgba(0,0,0,0.82);
+  font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 34px;
+  color: rgba(0,0,0,0.82);
 }
 .text-main{
-    font-family:Lora, Georgia, "Times New Roman", serif;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 34px;
-    color: rgba(0,0,0,0.7);
+  font-family:'Roboto',sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 34px;
+  color: rgba(0,0,0,0.7);
 }
 p{
-    font-family:Lora, Georgia, "Times New Roman", serif;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 34px;
-    color: rgba(0,0,0,0.7);
+  font-family:'Roboto',sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 34px;
+  color: rgba(0,0,0,0.7);
 }
 .form-control{
-  font-family: Lora, Georgia, "Times New Roman", serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 25px;
-  color : black;
-  max-height: 26px;
+font-family: 'Roboto',sans-serif;
+font-weight: 400;
+font-size: 14px;
+line-height: 25px;
+color : black;
+max-height: 26px !important;
 }
 .table .thead-dark th{
-    font-family: Lora, Georgia, "Times New Roman", serif;
-    font-weight: 400;
-    font-size: 15px;
-    font-weight: 500;
-    line-height: 25px;
-    color : white;
-  }
-  td{
-    font-family: Lora, Georgia, "Times New Roman", serif;
-    font-weight: 400;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    color : black;
-  }
+  font-family: 'Roboto',sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 25px;
+  color : white;
+}
+td{
+  font-family: 'Roboto',sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  color : black;
+}
 .row-btn{
-    font-family: Lora, Georgia, "Times New Roman", serif;
-    font-weight: 400;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    margin:0px;
-    height: 48px;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin:0px;
+  height: 48px;
+}
+.text-success{
+color: #28a745 !important;
+}
+.text-danger{
+color : #dc3545 !important;
+}
+.bg-danger{
+background-color:rgba(220,53,69,.5)!important
+}
+.bg-success{
+background-color:rgba(92,184,92,.5)!important
+}
+.bg-warning{
+background-color:rgba(240,173,78,.2)!important
+}
+.custom-day {
+text-align: center;
+padding: 0.185rem 0.25rem;
+display: inline-block;
+height: 2rem;
+width: 2rem;
+}
+.btn-top{
+margin-right:10px !important;
+}
+.btn{
+margin: 0px;
+}
+.hidden{
+display: none !important;
+}
+.custom-day.focused {
+background-color: #e6e6e6;
+}
+.custom-day.range, .custom-day:hover {
+background-color: rgb(2, 117, 216);
+color: white;
+}
+.custom-day.faded {
+background-color: rgba(2, 117, 216, 0.5);
 }
 @media screen and (max-width: 768px) {
-    #content6-1{
-      margin-top: 80px !important;
-    }
+  #content6-1{
+    margin-top: 80px !important;
+  }
 }
