--- a/src/app/check-reviews/check-reviews.component.css
+++ b/src/app/check-reviews/check-reviews.component.css
@@ -1,27 +1,7 @@
-.before,
-  .after {
-    margin: 0;
-  }
-  .before figcaption,
-  .after figcaption {
-    border-radius: 12px;
-    opacity: 0.5;
-    color: aliceblue;
-    opacity: 0.8;
-    padding: 12px;
-    font-weight: bold;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    line-height: 100%;
-  }
-  .before figcaption {
-    left: 5px;
-  }
 
-  .after figcaption {
-    right: 5px;
-  }
+#content6-1{
+    margin-top:80px !important;
+}
 .heading-main{
     font-family:Poppins, Helvetica, Arial, Lucida, sans-serif;
     font-weight: 500;
@@ -37,29 +17,29 @@
     color: rgba(0,0,0,0.82);
 }
 .text-main{
-    font-family:Lora, Georgia, "Times New Roman", serif;
+    font-family:'Roboto',sans-serif;
     font-weight: 500;
     font-size: 17px;
     line-height: 34px;
     color: rgba(0,0,0,0.7);
 }
 p{
-    font-family:Lora, Georgia, "Times New Roman", serif;
+    font-family:'Roboto',sans-serif;
     font-weight: 400;
     font-size: 17px;
     line-height: 34px;
     color: rgba(0,0,0,0.7);
 }
 .form-control{
-  font-family: Lora, Georgia, "Times New Roman", serif;
+  font-family: 'Roboto',sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 25px;
   color : black;
-  max-height: 26px;
+  max-height: 26px !important;
 }
 .table .thead-dark th{
-    font-family: Lora, Georgia, "Times New Roman", serif;
+    font-family: 'Roboto',sans-serif;
     font-weight: 400;
     font-size: 15px;
     font-weight: 500;
@@ -67,7 +47,7 @@ p{
     color : white;
   }
   td{
-    font-family: Lora, Georgia, "Times New Roman", serif;
+    font-family: 'Roboto',sans-serif;
     font-weight: 400;
     font-size: 14px;
     font-weight: 400;
@@ -75,13 +55,54 @@ p{
     color : black;
   }
 .row-btn{
-    font-family: Lora, Georgia, "Times New Roman", serif;
+    font-family: 'Roboto',sans-serif;
     font-weight: 400;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
     margin:0px;
     height: 48px;
+}
+.text-success{
+  color: #28a745 !important;
+}
+.text-danger{
+  color : #dc3545 !important;
+}
+.bg-danger{
+  background-color:rgba(220,53,69,.5)!important
+}
+.bg-success{
+  background-color:rgba(92,184,92,.5)!important
+}
+.bg-warning{
+  background-color:rgba(240,173,78,.2)!important
+}
+.custom-day {
+  text-align: center;
+  padding: 0.185rem 0.25rem;
+  display: inline-block;
+  height: 2rem;
+  width: 2rem;
+}
+.btn-top{
+  margin-right:10px !important;
+}
+.btn{
+  margin: 0px;
+}
+.hidden{
+  display: none !important;
+}
+.custom-day.focused {
+  background-color: #e6e6e6;
+}
+.custom-day.range, .custom-day:hover {
+  background-color: rgb(2, 117, 216);
+  color: white;
+}
+.custom-day.faded {
+  background-color: rgba(2, 117, 216, 0.5);
 }
 @media screen and (max-width: 768px) {
     #content6-1{
