--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide d-flex justify-content-center" style="width: 17rem;">
-                    <img src="../../assets/images/avatar-girl.png" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/namrata.jpg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Dr. Namrata Datta</strong></h5>
                         <h6 class="card-subtitle mb-2 text-dark gap">BDS, FAGE [MANIPAL]</h6>
