--- a/src/app/brush/brush.component.html
+++ b/src/app/brush/brush.component.html
@@ -73,7 +73,7 @@ between the teeth and under the gum line.
                     </li>
                 </ul>
                 <p class="heading-sub" >
-                    <a href="../../assets/docs/OHM-ADA_Brushing_English.pdf" target="_blank" style="color: #fab441;line-height: 1.75; font-weight: 700;">Click here</a> to download the how to brush PDF.
+                    <a href="../../assets/docs/OHM-ADA_Brushing_English.pdf" rel="noopener" target="_blank" style="color: #fab441;line-height: 1.75; font-weight: 700;">Click here</a> to download the how to brush PDF.
                 </p>
             </div>
         </div>
