--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -11,7 +11,7 @@
         <div class="row d-flex justify-content-center mt-5 mb-2">
             <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/abir-saha.jpeg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Dr. Abir Kumar Saha</strong></h5>
                         <h6 class="card-subtitle mb-2 text-dark gap">BDS [WBUHS]</h6>
@@ -27,7 +27,7 @@
                     <img src="../../assets/images/namrata.jpg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
                         <h5 class="card-title"><strong>Dr. Namrata Datta</strong></h5>
-                        <h6 class="card-subtitle mb-2 text-dark gap">BDS, FAGE [MANIPAL]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS [MANIPAL]</h6>
                         <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral & Dental Surgeon</h6>
                         <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 7374-A</h6>
                         
