--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <section class="menu menu2 cid-sCaOWR0CfJ" once="menu" id="menu2-0">
     <div class="row d-flex justify-content-center bg-orange top-bar p-0 m-0">
         <div class="col-auto d-flex align-items-center p-0">
-            <span class="mobile-hide text-light">Click to view our latest</span>&nbsp;<span><a (click)="openMember()" class="underline">Membership</a>&nbsp;<span class="text-light">and</span>&nbsp;<a (click)="openOffer()" class="underline">Offers</a></span>
+            <span class="mobile-hide text-light">Click to view our latest</span>&nbsp;<span><span (click)="openMember()" class="underline">Membership</span>&nbsp;<span class="text-light">and</span>&nbsp;<span (click)="openOffer()" class="underline">Offers</span></span>
         </div>
     </div>
     <div class="row d-flex justify-content-end bg-light top-middle-bar p-0 m-0">
@@ -54,16 +54,16 @@
                     </li>
                     <li class="nav-item"><a class="nav-link link text-grey caps display-4" routerLink="/" fragment="form2-g">Contact Us</a></li>
                     <li class="nav-item">
-                        <a class="nav-link link text-grey caps display-4" data-toggle="modal" data-target="#feedbackformmodal">Feedback</a>
+                        <span class="nav-link link text-grey caps display-4" data-toggle="modal" data-target="#feedbackformmodal" href="javascript:void(0)">Feedback</span>
                     </li>
                     <li class="nav-item" *ngIf="user === null">
                         <a class="nav-link link text-grey caps display-4" routerLink="/login">Login</a>
                     </li>
                     <li class="nav-item" *ngIf="user !== null">
-                        <a class="nav-link link text-grey caps display-4">Welcome Admin</a>
+                        <a class="nav-link link text-grey caps display-4" href="javascript:void(0)">Welcome Admin</a>
                     </li>
                     <li class="nav-item" *ngIf="user !== null">
-                        <a class="nav-link link text-grey caps display-4" (click)="logout()">Logout</a>
+                        <a class="nav-link link text-grey caps display-4" href="javascript:void(0)" (click)="logout()">Logout</a>
                     </li>
                     <li class="nav-item mb-2">
                         <a class="btn btn-small display-4 mr-0" href="https://form.jotform.com/212194400583046">Request Appointment</a>
@@ -84,14 +84,14 @@
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
                     <strong>Addresses</strong>
                 </h5>
-                <a href="https://goo.gl/maps/AKUdDeyeB3Gkqb1WA" target="_blank">
+                <a href="https://goo.gl/maps/AKUdDeyeB3Gkqb1WA" rel="noopener" target="_blank">
                     <p class="mbr-text mbr-fonts-style display-7 hv-und">
                         AA 10/6, Shastri Bagan <br> 
                         Desh Bandhu Nagar, Baguiati <br>
                         Kolkata, West Bengal 700059
                     </p>
                 </a> <br>
-                <a href="https://g.page/drsmileclinic?share" target="_blank">
+                <a href="https://g.page/drsmileclinic?share" rel="noopener" target="_blank">
                     <p class="mbr-text mbr-fonts-style display-7 hv-und">
                         Dash Drone, Newtown, <br> 
                         Kolkata, West Bengal 700136
@@ -134,47 +134,53 @@
                         <a class="text-white small" routerLink = "/" fragment="insurance">Insurance and financing</a>
                     </li>
                     <li class="mbr-text item-wrap">
-                        <a class="text-white small" (click)="openOffer()">Offers</a>
+                        <span class="text-white small" (click)="openOffer()">Offers</span>
                     </li>
                     <li class="mbr-text item-wrap">
-                        <a class="text-white small" (click)="openMember()" >Memberships</a>
+                        <span class="text-white small" (click)="openMember()" >Memberships</span>
                     </li>
                     <li class="mbr-text item-wrap">
                         <a class="text-white small" routerLink = "/" fragment="oral">Blog - Dental Advise by Dr. Smile</a>
                     </li>
                     <li class="mbr-text item-wrap">
-                        <a class="text-info small">Developed by : <a href="https://suparno1998.github.io">Suparno Karmakar</a></a>
+                        <span class="text-info small">Developed by : <a href="https://suparno1998.github.io">Suparno Karmakar</a></span>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <span class="text-info small"><a href="../assets/sitemap.xml">Sitemap</a></span>
+                    </li>
+                    <li class="mbr-text item-wrap">
+                        <span class="text-info small"><a href="../assets/robots.txt">Robots</a></span>
                     </li>
                 </ul>
                 <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5 display-7">
                     <strong>Feedback</strong>
                 </h5>
                 <p class="mbr-text mbr-fonts-style mb-4 small">
-                    Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated. <a href="https://forms.gle/f4ZkMLWxktvP5Kaz7" target="_blank">Give your feed back here.</a>
+                    Please send us your ideas, bug reports, suggestions! Any feedback would be appreciated. <a href="https://forms.gle/f4ZkMLWxktvP5Kaz7" rel="noopener" target="_blank">Give your feed back here.</a>
                 </p>
             </div>
             <div class="col-12 col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Dr Smile, dash drone" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" title="locations" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=Dr Smile, dash drone" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 <div class="social-list align-left">
                     <div class="soc-item">
-                        <a href="https://instagram.com" target="_blank">
+                        <a href="https://instagram.com" rel="noopener" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-instagram socicon" style="font-size: 30px; color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://www.facebook.com" target="_blank">
+                        <a href="https://www.facebook.com" rel="noopener" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon" style="font-size: 30px; color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://www.youtube.com" target="_blank">
+                        <a href="https://www.youtube.com" rel="noopener" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255); font-size: 30px;"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://linkedin.com" target="_blank">
+                        <a href="https://linkedin.com" rel="noopener" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-linkedin socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255); font-size: 30px;"></span>
                         </a>
                     </div>     
@@ -198,7 +204,11 @@
 <!-- Footer End-->
 <!--Cookie Data and Scroll to top end-->
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#000000' data-cookie-colorBg='rgba(182, 242, 251, 0.62)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#000000' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a routerLink='/privacy' fragment='top'>cookie policy</a>.">
-<div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+<div id="scrollToTop" class="scrollToTop mbr-arrow-up">
+    <span style="text-align: center;" href="javascript:void(0);">
+        <i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i>
+    </span>
+</div>
 <input name="animation" type="hidden">
 <!--Cookie Data and Scroll to top end-->
 <!--Membership modal start-->
