--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1 main-heading row"><div class="col-12 col-md-6 col-lg-auto p-0"> Dr. Smile</div><div class="col-12 col-md-6 col-lg-7 p-0"><span class="mbr-fonts-style mb-3 display-5 text-sub-heading-main"><span class="hyphen">&nbsp;-&nbsp;</span>Your Smile Designer</span></div></h1>
                 <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-5 text-sub-heading-des row">
                     <div class="col-12 col-md-12 col-lg-12 p-0">
-                        SMILE... and let the world wonder Why !!
+                        <h1>SMILE... and let the world wonder Why !!</h1>
                     </div>
                 </h2>
                 
@@ -27,8 +27,13 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
                 <h3 class=" align-center my-4 display-4">
-                   <a routerLink="/covid" fragment = "top" style="color: #fab441;line-height: 1.75;"><strong>Click here</strong></a> to read an <strong>update from Dr. Smile regarding COVID-19 safety measures</strong> and what to expect at your next appointment.
+                   Read an update from Dr. Smile regarding COVID-19 safety measures and what to expect at your next appointment. Click on the button to learn more.
                 </h3>
+            </div>
+        </div>
+        <div class="row justify-content-center mb-3">
+            <div class="col-auto">
+                <a class="btn btn-danger display-4 button-style" routerLink="/covid" fragment="top">Read about our COVID policy</a>
             </div>
         </div>
     </div>
@@ -47,14 +52,14 @@
         </div>
         <div class="row justify-content-center mb-3">
             <div class="col-auto">
-                <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216346337047">Learn More</a>
+                <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216346337047">Get a FREE smile makeover</a>
             </div>
         </div>
     </div>
 </section>
 <!--Smile makeover end-->
 <div id="about-us-top" class="top"></div>
-<!--About us start-->
+<!--About us start--> 
 <section class="about-us" id="about-us" style="background-color: aliceblue;">
     <div class="container-fluid pb-3">
         <div class="row d-flex justify-content-center mb-2">
@@ -152,11 +157,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider>
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before1.png" loading="lazy">
+                        <img width="100%" src="assets/images/before1.png" loading="lazy" alt="before-1">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after1.png" loading="lazy">
+                        <img width="100%" src="assets/images/after1.png" loading="lazy" alt="after-1">
                         <figcaption>After</figcaption>
                     </figure>                
                     
@@ -165,11 +170,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider>
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before2.png" loading="lazy">
+                        <img width="100%" src="assets/images/before2.png" loading="lazy" alt="before-2">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after2.png" loading="lazy">
+                        <img width="100%" src="assets/images/after2.png" loading="lazy" alt="after-2">
                     <figcaption>After</figcaption>
                     </figure>                
                     
@@ -178,11 +183,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider>
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before3.png" loading="lazy">
+                        <img width="100%" src="assets/images/before3.png" loading="lazy" alt="before-3">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after3.png" loading="lazy">
+                        <img width="100%" src="assets/images/after3.png" loading="lazy" alt="after-3">
                     <figcaption>After</figcaption>
                     </figure>                
                     
@@ -191,11 +196,11 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <img-comparison-slider style="width: 100% !important;">
                     <figure slot="first" class="before">
-                        <img width="100%" src="assets/images/before4.png" loading="lazy">
+                        <img width="100%" src="assets/images/before4.png" loading="lazy" alt="before-4">
                         <figcaption>Before</figcaption>
                     </figure>
                     <figure slot="second" class="after">
-                        <img width="100%" src="assets/images/after4.png" loading="lazy">
+                        <img width="100%" src="assets/images/after4.png" loading="lazy" alt="after-4">
                     <figcaption>After</figcaption>
                     </figure>                
                     
@@ -204,7 +209,7 @@
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-auto">
-                <a routerLink="/smiles" fragment="top" class="btn btn-danger display-4 button-style">See More</a>
+                <a routerLink="/smiles" fragment="top" class="btn btn-danger display-4 button-style">See More Smile Transformations</a>
             </div>
         </div>
     </div>
@@ -353,16 +358,16 @@
     
     <div class="images-container container-fluid pt-3">
         <div class="mbr-section-head">
-            <h3 class="mbr-section-title mbr-fonts-style align-center mb-2 text-choose-heading">
+            <h3 class="mbr-section-title mbr-fonts-style align-center mb-2 text-choose-heading dark">
                 Insurance and Financing
             </h3>
-            <h4 class="mbr-section-subtitle align-center mb-0 mt-3 choose-text-normal">
+            <h4 class="mbr-section-subtitle align-center mb-0 mt-3 choose-text-normal dark">
                 We accept insurance from Bajaj Finserv presently. 
             </h4>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-10 col-6 col-lg-4 card shadow">
-                <img src="assets/images/bajaj-finserv-770x433.webp" loading="lazy">
+                <img src="assets/images/bajaj-finserv-770x433.webp" loading="lazy" alt="bajaj-finserv-770x433">
                 <div class="card-body">
                     <h5 class="card-title">Features</h5>
                     <div class="card-text">
@@ -377,8 +382,8 @@
         </div>
         <div class="row text-center d-flex justify-content-center">
             <span class="col-10 col-10 col-lg-10 text-center">No insurance? No problem. Enroll in one of our 
-                <a (click)="openMember()" class="deep-orange">membership program</a> or navigate through 
-                <a (click)="openOffer()" class="deep-orange">amazing offers</a>. Call 
+                <span (click)="openMember()" class="deep-orange">membership program</span> or navigate through 
+                <span (click)="openOffer()" class="deep-orange">amazing offers</span>. Call 
                 <a href="tel:+919674303234" class="deep-orange">+91 9674303234</a> to learn more.</span>
         </div>
     </div>
@@ -408,7 +413,7 @@
                 <img src="../../assets/images/Screenshot 2021-08-11 030133.png" alt="" srcset="" height="500px" width="500px" loading="lazy">
              </div>
              <div class="col-12 col-md-6 col-lg-6 my-1">
-                <iframe width="600" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJd_juiRqe-DkRGbA3rRSsSn0&key=AIzaSyD79t-kfxeVlxdQde7oYSR7ue_rPNYkrr4"></iframe>
+                <iframe width="600" height="500" style="border:0" title="hospital" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJd_juiRqe-DkRGbA3rRSsSn0&key=AIzaSyD79t-kfxeVlxdQde7oYSR7ue_rPNYkrr4"></iframe>
              </div>
          </div>
     </div>
@@ -553,7 +558,7 @@
                 <div class="row d-flex justify-content-start">
                     <div class="col-auto" style="width: 100%;">
                         <div class="form-group" >
-                            <label for="feedback">{{ rating >= 8 && rating >= 0? "What did we do good ? " : rating >= 2  && rating >= 0 ? "What would you like us to change for better service ? " :  rating > 0 ? "Where did we disappoint you, please tell us " : "Please give your feedback"}}</label>
+                            <label for="feedback">{{ rating >= 4 ? "What did we do good ? " : rating >= 2 ? "What would you like us to change for better service ? " :  rating > 0 ? "Where did we disappoint you, please tell us " : "Please give your feedback"}}</label>
                             <textarea name="feedback" id="feedback" rows="5" class="form-control form-control-text" [(ngModel)]="feedback"></textarea>
                         </div>
                     </div>
