--- a/src/app/oral/oral.component.html
+++ b/src/app/oral/oral.component.html
@@ -27,7 +27,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/diet" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/diet" fragment="top" >Learn More about decay</a>
                                         </div>
                                     </div>
                                 </div>
@@ -59,7 +59,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/coffee" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/coffee" fragment="top" >Learn More about effects of black coffee</a>
                                         </div>
                                     </div>
                                 </div>
@@ -87,7 +87,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/smoking" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/smoking" fragment="top" >Learn More about how smoking is bad</a>
                                         </div>
                                     </div>
                                 </div>
@@ -115,7 +115,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/breath" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/breath" fragment="top" >Learn More about bad breath</a>
                                         </div>
                                     </div>
                                 </div>
@@ -154,7 +154,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/brush" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/brush" fragment="top" >Learn More about better brushing practices</a>
                                         </div>
                                     </div>
                                 </div>
@@ -182,7 +182,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/fluoride" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/fluoride" fragment="top" >Learn More about fluoride toothpastes</a>
                                         </div>
                                     </div>
                                 </div>
@@ -210,7 +210,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/erision"fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/erision"fragment="top" >Learn More about dental erosion</a>
                                         </div>
                                     </div>
                                 </div>
@@ -237,7 +237,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/wisdom" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/wisdom" fragment="top" >Learn More about wisdom tooth</a>
                                         </div>
                                     </div>
                                 </div>
@@ -265,7 +265,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/children" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/children" fragment="top" >Learn More about Oral Healthcare of Children </a>
                                         </div>
                                     </div>
                                 </div>
@@ -292,7 +292,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/smile" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/smile" fragment="top" >Learn More about why smiling is important</a>
                                         </div>
                                     </div>
                                 </div>
@@ -320,7 +320,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/cancer" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/cancer" fragment="top" >Learn More about oral cancer</a>
                                         </div>
                                     </div>
                                 </div>
