--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -28,7 +28,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/filling" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/filling" fragment="top" >Learn More about Restotarion/Filling</a>
                                         </div>
                                     </div>
                                 </div>
@@ -56,7 +56,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/rct" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/rct" fragment="top" >Learn More about RCT</a>
                                         </div>
                                     </div>
                                 </div>
@@ -84,7 +84,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/scaling" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/scaling" fragment="top" >Learn More about scaling</a>
                                         </div>
                                     </div>
                                 </div>
@@ -118,7 +118,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/extraction" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/extraction" fragment="top" >Learn More about extraction</a>
                                         </div>
                                     </div>
                                 </div>
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/dentures" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/dentures" fragment="top" >Learn More about dentures</a>
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/crown" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/crown" fragment="top" >Learn More about crown and bridge</a>
                                         </div>
                                     </div>
                                 </div>
@@ -214,7 +214,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/implant"fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/implant"fragment="top" >Learn More about implants</a>
                                         </div>
                                     </div>
                                 </div>
@@ -247,7 +247,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/ortho" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/ortho" fragment="top" >Learn More about orthodontic treatment</a>
                                         </div>
                                     </div>
                                 </div>
@@ -279,7 +279,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/cosmo" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/cosmo" fragment="top" >Learn More about Cosmetic Dentistry</a>
                                         </div>
                                     </div>
                                 </div>
@@ -307,7 +307,7 @@
                                     </div>
                                     <div class="row justify-content-center">
                                         <div class="col-auto">
-                                            <a class="btn btn-danger display-4 button-style" routerLink="/peado" fragment="top" >Learn More</a>
+                                            <a class="btn btn-danger display-4 button-style" routerLink="/peado" fragment="top" >Learn More about pediatric dentistry</a>
                                         </div>
                                     </div>
                                 </div>
